test/fixtures/architecture-conformance/negative/cycles/cycle-a.ts
import './cycle-b';

export const cycleA = 'a';